--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Title</title>
+  </head>
+  
+  <body>
+    
+    </body>
+</html>
