--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8" />
     <title>Mun sivu</title>
+    <style>
+      p {
+          color: red;
+      }
+    </style>
   </head>
-  
   <body>
-    
-    </body>
+
+    <p>teksti</p>
+
+  </body>
 </html>
