--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-    <p>LEZ GOO</p>
+    <p>(Tähän tulee maken sivut) LEZ GOO (ps nikellä on pieni muna suussa <3 ) </p>
 
   </body>
 </html>
