--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   </head>
   <body>
 
-    <p>(Tähän tulee maken sivut) LEZ GOO (ps nikellä on pieni muna suussa <3 ) </p>
-      https://github.com/elkhmar/elkhmar.github.io/blob/main/kitty.jpg?raw=true
+    <p>(Tähän tulee maken sivut) LEZ GOO </p>
 
   </body>
 </html>
