--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <title>Mun sivu</title>
-    kitty.jpg
     <style>
       p {
           color: red;
@@ -11,7 +10,10 @@
   </head>
   <body>
 
-    <p>(Tähän tulee maken sivut) LEZ GOO </p>
+    <p>
+      <img src = "kitty.jpg"/> 
+      (Tähän tulee maken sivut) LEZ GOO 
+    </p>
 
   </body>
 </html>
