--- a/index.html
+++ b/index.html
@@ -1,19 +1,97 @@
-<!doctype html>
-<html>
-  <head>
-    <title>Mun sivu</title>
-    <style>
-      p {
-          color: red;
-      }
-    </style>
-  </head>
-  <body>
-
-    <p>
-      <img src = "kitty.jpg"/> 
-      (Tähän tulee maken sivut) LEZ GOO 
-    </p>
-
-  </body>
+<!DOCTYPE html>
+<html lang="fi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
+    <title>Home</title>
+</head>
+<body class="body1">
+    <nav class="navbar navbar-expand-sm bg-dark">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="index.html" class="nav-link">Koti</a>
+                </li>
+                <li class="nav-item">
+                    <a href="second.html" class="nav-link">Tarina</a>
+                </li>
+                <li class="nav-item">
+                    <a href="galleria.html" class="nav-link">Galleria</a>
+                </li>
+                <li class="nav-item">
+                    <a href="third.html" class="nav-link">yhteystiedot</a>
+                </li>
+            </ul>
+    </nav>
+<div>
+    <h1 class="otsikko">Tervetuloa Puman kotisivuille!</h1>
+</div>
+<div class="container-fluid float-left pöö">
+    <div class="row">
+        <div class="col-sm-12">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <div class="container">
+                <img class="d-block w-100" src="pic4.jpg" alt="First slide"></div>
+                <div class="carousel-caption d-none d-md-block"><h1>Puma puutarhassa</h1></div>
+        </div>
+        <div class="carousel-item">
+            <div class="container">
+                <img class="d-block w-100" src="pic5.jpg" alt="Second slide"></div>
+                <div class="carousel-caption d-none d-md-block"><h1>Puma pohtii</h1></div>
+        </div>
+            <div class="carousel-item">
+                <div class="container">
+                    <img class="d-block w-100" src="pic3.jpg" alt="Third slide"></div>
+                    <div class="carousel-caption d-none d-md-block"><h1>Puma leikkii</h1></div>
+            </div>
+    </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+        </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+            </a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container-fluid">
+    <div class="row rivi">
+            <div class="col-sm-12 ykkönen">     
+    <h2>Vieressä karuselli vilkkaasta pedosta</h2>
+        <p> 
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+        </p>
+        <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+        </p>
+        <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+        </p>
+        </div>
+    </div>
+</div>
+</body>
 </html>
